# linear-cli

./: .env.template  .gitignore  pyproject.toml
py_linear/: linear.py  models.py  queries.py
